See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.66.00

              Add pamfix: Does what pamfixtrunc did, plus repairs excessive
              sample values.

              pamfixtrunc: implement as call to new pamfix.

              pgmhist, ppmhist: Add -forensic: Analyze invalid >maxval pixels.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pgmramp: add -diagonal.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              libnetpbm: Read functions validate that sample values do not
              exceed maxval.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              libnetpbm: Validate image dimensions are small enough that you
              can allocate a row buffer.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pgmhist: fix incorrect report of quantiles or crash due to array
              bounds violation in some builds.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.  Always broken.  Quantile reporting was
              new in Netpbm 10.61 (December 2012).

              pgmhist: fix buffer overrun with -median.  Always broken.
              -median was new in Netpbm 10.61 (December 2012).

              pnmmargin: fix for size 0 and superfluous "unexpected operator" 
              message with size != 0.  Introduced in 10.42.

              pstopnm: fix wrong interpretations of -xsize and -ysize when
              rendering image in landscape (rotated).  This can appear as
              stretching and squashing.  Probably always broken.

              pstopnm: fix wrong orientation sometimes when you specify
              both -xsize and -ysize.  Introduced in 10.65.

              pgmramp: fix bogus output with really large images.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              ppmrelief: fix out-of-bound values in output.  Always broken.